making form to create event

--- a/frontend/src/css/loginForm.css
+++ b/frontend/src/css/loginForm.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #ebbabd;
+    background-color: #eec7c9;
   }
   
   .form-wrapper {
