fixing readme file

--- a/src/css/loginForm.css
+++ b/src/css/loginForm.css
@@ -137,3 +137,10 @@
     color: #999;
     font-weight: lighter;
   }
+
+
+@media (max-width: 600px) {
+    .main {
+        border-radius: 0px;
+    }
+}
