--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   }
   } */
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 961px) {
   body {
     width: 100%; 
 
@@ -16,9 +16,6 @@
       width: 600;
       height: 1200
     }
-    .sear{
-      margin:'auto';
-
-    }
+    
 }
 
