--- a/src/css/loginForm.css
+++ b/src/css/loginForm.css
@@ -93,7 +93,7 @@
   .createEvent {
     width: 50%;
     margin: auto;
-    
+    margin-bottom: 10px ;
     /* display: center;
     flex-direction: column;
     align-items: center; */
@@ -121,6 +121,7 @@
     font-weight: lighter;
     letter-spacing: 1px;
     margin-bottom: 0.25em;
+    /* margin-bottom: 10px ; */
   }
   
   .createAccount button:hover,
