fixing styling for nav bar

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   }
   } */
 
-@media only screen and (max-width: 961px) {
+/* @media only screen and (max-width: 961px) {
   body {
     width: 100%; 
 
@@ -17,5 +17,5 @@
       height: 1200
     }
     
-}
+} */
 
