--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,8 +1,8 @@
-@media (max-width: 800px) {
+@media (min-width: 700px) {
    
    #sear-mobile{
         margin: auto;
-        width: 100%;
+        width: 60%;
       
         
       }
