--- a/src/css/splash.css
+++ b/src/css/splash.css
@@ -1,9 +1,13 @@
 @media only screen and (min-width: 700px){
 .title1 {
-    display: block;
+    /* display: block; */
     /* justify-content: space-around; */
     /* margin: 5% 10% 0 10%; */
-    align-items: center;
+    /* align-items: center; */
+}
+#splash{
+  display: block;
+  align-items: center;
 }
 }
 
