--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,9 +1,10 @@
-@media (min-width: 700px) {
+/* @media (max-width: 700px) {
    
    #sear-mobile{
         margin: auto;
-        width: 60%;
+        margin-top: 100;
+        width: 100%;
       
         
       }
-  }
+  } */
