--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,6 +1,9 @@
 #navbar-items {
     display: none;
 }
+#navbar-items2 {
+    display: none;
+}
 
 .mobile-nav-overlay {
     align-items: center;
@@ -19,7 +22,7 @@
     left: 16px;
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 750px) {
     #navbar-items {
         display: flex;
     }
@@ -31,15 +34,15 @@
     }  
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 750px) {
   
     .mobile-home-btn {
         position: fixed; 
        
          left: 20px; 
     }
-    #navbar-items2{
+    /* #navbar-items2{
         display:none
-    }
+    } */
     
 }
